--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Hello World",
-  "short_name": "Hello App",
+  "name": "Hello App",
+  "short_name": "Hello",
   "icons": [{
     "src": "images/hello-icon-128.png",
       "sizes": "128x128",
